[package]
name = "fs_extra_back_pair"
version = "1.3.0"
edition = "2018"
description = "Expanding std::fs and std::io. Recursively copy folders with information about process and much more."
license = "MIT"
authors = [
    "Denis Kurilenko <webdesus@gmail.com>",
    "Ayoub Touba <ayubtouba@gmail.com>",
]
keywords = ["filesystem", "recursion", "copy", "dir", "file"]
homepage = "https://github.com/AyubTouba/fs_extra_back_pair"
documentation = "https://docs.rs/fs_extra"
repository = "https://github.com/AyubTouba/fs_extra_back_pair"
include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
